tests/base/invalid/SetComprehension_CompileFail_2.whiley


void ::main(System.Console sys):
    xs = 1
    zs = { x | y ∈ xs }
    sys.out.println(Any.toString(xs))
    sys.out.println(Any.toString(zs))
